--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
                <div id="b3"></div>
            </div>
            <h1>Lorem</h1>
-           <img src="https://img.icons8.com/android/24/fa314a/shopping-cart.png"/>
+           <img src="https://img.icons8.com/android/24/fa314a/shopping-cart.png" width="35px"/>
         </div>
 
         <h1 id="head1">What are you <br> having  for Lunch?</h1>
         <div class="image">
             <div class="image1">
-                <img src="maxican.jpeg" alt="maxican taco"  width= "120px" height= "120px" >
+                <img src="maxican.jpeg" alt="maxican taco"  width= "100px" height= "100px" >
                <p id="name1"> Mexican Taco</p>
             </div>
             <div class="image2">
-                <img src="farmhouse.jpeg" alt="farmhouse pizza" width="120px" height="120px">
+                <img src="farmhouse.jpeg" alt="farmhouse pizza" width="100px" height="100px">
                 <p id="name2"> Farmhouse Pizza</p>
             </div>
             <div class="image3">
-                <img src="chicken.jpeg" alt="chicken burger" width="120px" height="120px" >
+                <img src="chicken.jpeg" alt="chicken burger" width="100px" height="100px" >
                 <p id="name3"> Chicken Burger</p>
             </div>
             <div class="image4">
-                <img src="loaded.jpeg" alt="loaded nachos" width="120px" height="120px">
+                <img src="loaded.jpeg" alt="loaded nachos" width="100px" height="100px">
                 <p id="name4">Loaded Nachos</p>
             </div>
         </div>
