--- a/index.html
+++ b/index.html
@@ -10,17 +10,38 @@
 </head>
 <body>
     <div class="wrapper">
+        <nav class="sidenav">
+            <h1>Lorem <br> Ipsum</h1>
+            <ul class="home">
+                <li id="list1">About</li>
+                <li>Services</li>
+                <li>Cuisine</li>
+                <li>Gallery</li>
+                <li>Contact</li>
+                <li>Book</li>
+            </ul>
+            <button class="cart">Cart</button>
+        </nav>
+        <div class="wrap">
         <div class="header">
            <div class="bar">
                <div id="b1"></div>
                <div id="b2"></div>
                <div id="b3"></div>
            </div>
-           <h2>Lorem</h2>
+           <h3>Lorem</h3>
            <img src="https://img.icons8.com/android/24/fa314a/shopping-cart.png" width="35px"/>
         </div>
-
-        <h2 id="head1">What are you <br> having  for Lunch?</h2>
+        <h3 id="head1">What are you <br> having  for Lunch?</h3>
+        <div class="lap">
+        <h3 id="head2">What are you <br> having  for Lunch?</h3>
+        <div class="footer">
+            <p id="para1">
+                Loreum ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.
+            </p>
+            <div class="bottom"></div>
+        </div>
+    </div>
         <div class="image">
             <div class="image1">
                 <img src="maxican.jpeg" alt="maxican taco"  width= "100px" height= "100px" >
@@ -38,11 +59,18 @@
                 <img src="loaded.jpeg" alt="loaded nachos" width="100px" height="100px">
                 <p id="name4">Loaded Nachos</p>
             </div>
+            <div class="image5">
+                <img src="hakka.jpeg" alt="hakka noodles" width="100px" height="100px">
+                <p id="name5">Hakka Noodles</p>
+            </div>
         </div>
+        <div class="footer1">
         <p id="para1">
             Loreum ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.
         </p>
         <div class="bottom"></div>
+    </div>
+    </div>
     </div>
    
 </body>
